--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <!--jumbotron-->
     <div class="jumbotron jumbotron-fluid text-center">
       <div class="container">
-        <h1 class="display-3">Cinema</h1>
-        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+        <h1 class="display-3">Academy Cinemas</h1>
+        <p class="lead">Sit back relax and enjoy the show!</p>
       </div>
     </div>
     <!--/jumbotron-->
