add background and text to jumbotron

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     </nav>
     <!--/nav-->
     <!--jumbotron-->
-    <div class="jumbotron jumbotron-fluid text-center">
+    <div class="jumbotron jumbotron-fluid text-center bg-info">
       <div class="container">
-        <h1 class="display-3">Academy Cinemas</h1>
+        <h1 class="display-2">Academy Cinemas</h1>
         <p class="lead">Sit back relax and enjoy the show!</p>
       </div>
     </div>
