add columns and images

--- a/index.html
+++ b/index.html
@@ -54,6 +54,26 @@
       </div>
     </div>
     <!--/jumbotron-->
+
+    <!--Main content-->
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <h3>About Acedemy Cinemas</h3>
+          <img class="img-fluid" src="./img/pdx.jpg" alt="">
+          <p></p>Located in the beatiful city of Portland,Oregon's Pearl District.
+          <p>RIP CITY!!!</p>
+        </div>
+        <div class="col-md-4">
+          <h3>Accomodations</h3>
+
+        </div>
+        <div class="col-md-4">
+          <h3>Showtimes</h3>
+        </div>
+      </div>
+    </div>
+    <!--/main content-->
     <!--End Page Content-->
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
