finished page with movie listings

--- a/index.html
+++ b/index.html
@@ -66,10 +66,33 @@
         </div>
         <div class="col-md-4">
           <h3>Accomodations</h3>
+          <p>All of our auditoriums are eqipped with brand new Buck 3D sound systems!</p>
+          <p>Relax in our, extra wide, plus recliners. Seating is first come first served basis.</p>
+          <p>Our auditoriums are constantly freezing because we know how Portlanders hate the heat.<p>
 
         </div>
         <div class="col-md-4">
           <h3>Showtimes</h3>
+            <ul class="list-group">
+              <li class="list-group-item">
+                <a class="nav-link" href="#showtimes">Kong: Skull Island</a>
+              </li>
+              <li class="list-group-item">
+                <a class="nav-link" href="#showtimes">Ghost in the Shell</a>
+              </li>
+              <li class="list-group-item">
+                <a class="nav-link" href="#showtimes">Beauty and the Beast</a>
+              </li>
+              <li class="list-group-item">
+                <a class="nav-link" href="#showtimes">Life (2017)</a>
+              </li>
+              <li class="list-group-item">
+                <a class="nav-link" href="#showtimes">Logan (2017)</a>
+              </li>
+              <li class="list-group-item">
+                <a class="nav-link" href="#showtimes">Power Rangers</a>
+              </li>
+            </ul>
         </div>
       </div>
     </div>
