add movie times

--- a/index.html
+++ b/index.html
@@ -101,20 +101,28 @@
     <!-- showtimes-->
     <div class="card-group">
       <div class="card">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="./img/kongskullisland.jpg" alt="Card image cap">
         <div class="card-block">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title">Kong: Skull Island</h5>
+          <span class="badge badge-pill badge-info">11:30 AM</span>
+          <span class="badge badge-pill badge-info">12:45 PM</span>
+          <span class="badge badge-pill badge-info">3:00 PM</span>
+          <span class="badge badge-pill badge-info">6:30 PM</span>
+          <span class="badge badge-pill badge-info">10:30 PM</span>
         </div>
         <div class="card-footer">
           <small class="text-muted">Last updated 3 mins ago</small>
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="./img/ghostintheshell.jpg" alt="Card image cap">
         <div class="card-block">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title">Ghost in the Shell</h5>
+          <span class="badge badge-pill badge-info">9:00 AM</span>
+          <span class="badge badge-pill badge-info">12:30 PM</span>
+          <span class="badge badge-pill badge-info">2:55 PM</span>
+          <span class="badge badge-pill badge-info">6:15 PM</span>
+          <span class="badge badge-pill badge-info">11:30 PM</span>
         </div>
         <div class="card-footer">
           <small class="text-muted">Last updated 3 mins ago</small>
@@ -122,10 +130,56 @@
       </div>
 
       <div class="card">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src=".//img/beautyandthebeast.jpg" alt="Card image cap">
         <div class="card-block">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title">Beauty and The Beast</h5>
+          <span class="badge badge-pill badge-info">10:30 AM</span>
+          <span class="badge badge-pill badge-info">12:00 PM</span>
+          <span class="badge badge-pill badge-info">2:15 PM</span>
+          <span class="badge badge-pill badge-info">6:45 PM</span>
+          <span class="badge badge-pill badge-info">11:45 PM</span>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src=".//img/life.jpg" alt="Card image cap">
+        <div class="card-block">
+          <h5 class="card-title">Life 2016</h5>
+          <span class="badge badge-pill badge-info">11:30 AM</span>
+          <span class="badge badge-pill badge-info">12:45 PM</span>
+          <span class="badge badge-pill badge-info">3:00 PM</span>
+          <span class="badge badge-pill badge-info">6:30 PM</span>
+          <span class="badge badge-pill badge-info">10:30 PM</span>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src=".//img/logan.jpg" alt="Card image cap">
+        <div class="card-block">
+          <h5 class="card-title">Logan 2017</h5>
+          <span class="badge badge-pill badge-info">9:00 AM</span>
+          <span class="badge badge-pill badge-info">12:30 PM</span>
+          <span class="badge badge-pill badge-info">2:55 PM</span>
+          <span class="badge badge-pill badge-info">6:15 PM</span>
+          <span class="badge badge-pill badge-info">11:30 PM</span>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src=".//img/powerrangers.jpg" alt="Card image cap">
+        <div class="card-block">
+          <h5 class="card-title">Power Rangers</h5>
+          <span class="badge badge-pill badge-info">10:30 AM</span>
+          <span class="badge badge-pill badge-info">12:00 PM</span>
+          <span class="badge badge-pill badge-info">2:15 PM</span>
+          <span class="badge badge-pill badge-info">6:45 PM</span>
+          <span class="badge badge-pill badge-info">11:45 PM</span>
         </div>
         <div class="card-footer">
           <small class="text-muted">Last updated 3 mins ago</small>
