add email input form

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Showtimes</a>
+            <a class="nav-link" href="#showtimes">Showtimes</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Deals</a>
@@ -99,7 +99,7 @@
     <!--/main content-->
 
     <!-- showtimes-->
-    <div class="card-group">
+    <div class="card-group" id="showtimes">
       <div class="card">
         <img class="card-img-top" src="./img/kongskullisland.jpg" alt="Card image cap">
         <div class="card-block">
@@ -186,8 +186,40 @@
         </div>
       </div>
     </div>
-
     <!--/showtimes-->
+
+    <!--sign up-->
+    <div class="container py-4 text-center col-md-6">
+      <form>
+        <div class="form-group row">
+          <h1 class="text-primary">Stay current on the movies.</h1>
+          <div class="col-sm-10">
+            <input type="email" class="form-control form control-lg" id="lgFormGroupInput" placeholder="you@example.com">
+            <button type="button" class="btn btn-outline-primary">Sign Up!</button>
+          </div>
+        </div>
+      </form>
+
+    </div>
+
+    <!--/sign up-->
+
+    <!--footer-->
+    <ul class="nav">
+      <li class="nav-item">
+        <small><a class="nav-link active" href="#">Movie Rewards</a></small>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Movies@news.org</a>
+      </li>
+      <li class="nav-item">
+        <small><a class="nav-link" href="#">Info@academycinemas.com</a></small>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link">&copy;2017 Academy Cinemas&reg;</a>
+      </li>
+    </ul>
+    <!--/footer-->
     <!--End Page Content-->
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
