--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 
   </head>
-  <body>
+  <body id="home">
     <!--Page Content-->
     <div class="container">
-      <!--Nav-->
-    <nav class="navbar navbar-toggleable-md navbar-light" style="background-color: #e3f2fd">
+    <!--Nav-->
+    <nav class="navbar navbar-toggleable-md fixed-top navbar-light" style="background-color: #e3f2fd">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -27,7 +27,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
@@ -36,7 +36,7 @@
             <a class="nav-link" href="#showtimes">Showtimes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Deals</a>
+            <a class="nav-link" href="#deals">Deals</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
@@ -192,10 +192,10 @@
     <div class="container py-4 text-center col-md-6">
       <form>
         <div class="form-group row">
-          <h1 class="text-primary">Stay current on the movies.</h1>
-          <div class="col-sm-10">
+          <h1 class="display-5 my-5 text-primary">Stay current on the movies.</h1>
+          <div class="col-sm-12">
             <input type="email" class="form-control form control-lg" id="lgFormGroupInput" placeholder="you@example.com">
-            <button type="button" class="btn btn-outline-primary">Sign Up!</button>
+            <button type="button" class="btn btn-outline-primary mt-4 mr-auto ">Sign Up!</button>
           </div>
         </div>
       </form>
@@ -205,7 +205,7 @@
     <!--/sign up-->
 
     <!--footer-->
-    <ul class="nav">
+    <ul class="nav" id="deals">
       <li class="nav-item">
         <small><a class="nav-link active" href="#">Movie Rewards</a></small>
       </li>
