finish cinema project with bootstarp

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
     <!--Nav-->
     <nav class="navbar navbar-toggleable-md fixed-top navbar-light" style="background-color: #e3f2fd">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <a class="navbar-brand" href="#">
@@ -39,7 +39,7 @@
             <a class="nav-link" href="#deals">Deals</a>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
+        <form class="form-inline my-2 my-lg-0 hidden-sm-down">
           <input class="form-control mr-sm-2" type="text" placeholder="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
           </form>
@@ -47,7 +47,7 @@
     </nav>
     <!--/nav-->
     <!--jumbotron-->
-    <div class="jumbotron jumbotron-fluid text-center bg-info">
+    <div class="jumbotron jumbotron-fluid text-center bg-info mt-4 hidden-md-down">
       <div class="container">
         <h1 class="display-2">Academy Cinemas</h1>
         <p class="lead">Sit back relax and enjoy the show!</p>
@@ -56,22 +56,22 @@
     <!--/jumbotron-->
 
     <!--Main content-->
-    <div class="container">
+    <div class="container my-5">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 pt-5">
           <h3>About Acedemy Cinemas</h3>
           <img class="img-fluid" src="./img/pdx.jpg" alt="">
           <p></p>Located in the beatiful city of Portland,Oregon's Pearl District.
           <p>RIP CITY!!!</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 pt-5">
           <h3>Accomodations</h3>
           <p>All of our auditoriums are eqipped with brand new Buck 3D sound systems!</p>
           <p>Relax in our, extra wide, plus recliners. Seating is first come first served basis.</p>
           <p>Our auditoriums are constantly freezing because we know how Portlanders hate the heat.<p>
 
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 pt-5">
           <h3>Showtimes</h3>
             <ul class="list-group">
               <li class="list-group-item">
